implement prereq action
